# ensemble-phase-2-poc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflows.yml
src/: inference.py  main.py  state.py
src/agents/: __init__.py  agents.py  base.py
src/agents/prompts/: account_note_agent.md  account_research_agent.md  resolution_agent.md
src/ensemble_phase_2_poc/: cli.py  inference.py  logger.py  scorers.py  state.py
src/ensemble_phase_2_poc/agents/: README.md  __init__.py  account_note_agent.py  account_research_agent.py  agents.py  base.py  base_agent.py  resolution_agent.py  triage_agent.py  utils.py
src/ensemble_phase_2_poc/agents/prompts/: triage_agent.md
src/ensemble_phase_2_poc/inference/: README.md  cohere.py  openai.py  router.py
src/ensemble_phase_2_poc/tools/: README.md  __init__.py  base_tool.py  descriptions.yaml  get_account_data.py  post_account_note.py  post_contractual_adjustment.py  schema.py  tools.py  utils.py
src/ensemble_phase_2_poc/workflow/: README.md  __init__.py  base.py  base_workflow.py  branching_workflow.py  sequential_workflow.py  workflow.py
src/tools/: __init__.py  schema.py  tools.py  utils.py
src/workflow/: __init__.py  base.py  workflow.py
test/: test_cli.py  test_import.py  test_inference.py  test_scorers.py  test_tools.py
