[project]
name = "ensemble-phase-2-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "edmond wen", email = "edmond@cohere.com" }
]
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "cohere>=5.20.2",
    "langchain>=1.2.7",
    "langchain-cohere>=0.5.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "mlflow>=3.8.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
ensemble-phase-2-poc = "ensemble_phase_2_poc:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
